# IntuiCAM

./: .cursorrules  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO  ai_toolpath_generation_pipeline_plan.md  build.bat  build.sh  codex_run.sh  codex_toolchain.cmake  debug_run.bat  setup.sh  test_occt.cmake  vcpkg.json
.github/workflows/: ci.yml
assets/models/: three_jaw_chuck.step
cli/: CMakeLists.txt
cli/src/: main.cpp
cmake/: DeployQt.cmake  IntuiCAMConfig.cmake.in
core/: CMakeLists.txt
core/common/: CMakeLists.txt
core/common/include/IntuiCAM/Common/: Types.h  Version.h
core/common/src/: Types.cpp  test_app.cpp
core/geometry/: CMakeLists.txt
core/geometry/include/IntuiCAM/Geometry/: IStepLoader.h  StepLoader.h  Types.h
core/geometry/src/: StepLoader.cpp  Types.cpp  placeholder.cpp
core/geometry/tests/: CMakeLists.txt  test_types.cpp
core/include/: Core.h
core/include/IntuiCAMCore/: Core.h
core/include/IntuiCAMCore/io/: StepLoader.h
core/include/io/: StepLoader.h
core/postprocessor/: CMakeLists.txt
core/postprocessor/include/IntuiCAM/PostProcessor/: Types.h
core/postprocessor/src/: Types.cpp  placeholder.cpp
core/python/: CMakeLists.txt  intuicam_bindings.cpp
core/simulation/: CMakeLists.txt
core/simulation/include/IntuiCAM/Simulation/: Types.h
core/simulation/src/: placeholder.cpp
core/src/: Core.cpp
core/src/io/: StepLoader.cpp
core/toolpath/: CMakeLists.txt
core/toolpath/include/IntuiCAM/Toolpath/: ChamferingOperation.h  ContouringOperation.h  DrillingOperation.h  DummyOperation.h  ExternalRoughingOperation.h  FacingOperation.h  FinishingOperation.h  GroovingOperation.h  InternalRoughingOperation.h  LatheProfile.h  OperationParameterManager.h  OperationSequence.h  Operations.h  PartingOperation.h  ProfileExtractor.h  RoughingOperation.h  ThreadingOperation.h  ToolTypes.h  ToolpathDisplayObject.h  ToolpathGenerationPipeline.h  ToolpathPlanner.h  Types.h
core/toolpath/src/: ChamferingOperation.cpp  ContouringOperation.cpp  DrillingOperation.cpp  DummyOperation.cpp  ExternalRoughingOperation.cpp  FacingOperation.cpp  FinishingOperation.cpp  GroovingOperation.cpp  InternalRoughingOperation.cpp  LatheProfile.cpp  OperationParameterManager.cpp  OperationSequence.cpp  Operations.cpp  PartingOperation.cpp  ProfileExtractor.cpp  RoughingOperation.cpp  ThreadingOperation.cpp  ToolTypes.cpp  ToolpathDisplayObject.cpp  ToolpathGenerationPipeline.cpp  ToolpathPlanner.cpp  Types.cpp  placeholder.cpp
core/toolpath/tests/: CMakeLists.txt  test_operation_factory.cpp  test_operation_generation.cpp  test_toolpath.cpp
docs/: CHANGELOG_chuck_implementation.md  CHANGELOG_viewer_improvements.md  ai_development.md  architecture.md  dependencies.md  development.md  getting_started.md  index.md  installation.md  pseudo_toolpath_pipeline.md  testing.md  tool_management_phase5_implementation.md  tool_management_progress.md  toolpath_generation_pipeline_plan.md  toolpath_workflow.md  troubleshooting.md  user_guide_chuck.md  windows_setup.md
docs/api/: chuck_api.md
docs/core/: core_design.md  dummy_toolpath_class.md
docs/dev/: coordinate_system.md
docs/gui/: 3d_viewer.md  auto_apply_changes.md  chuck_management.md  coordinate_system_implementation.md  gui_design.md  opengl3d_widget_best_practices.md  setup_tab_restructuring_plan.md  (+1 more)
examples/: CMakeLists.txt
examples/basic_usage/: CMakeLists.txt  simple_turning.cpp
examples/custom_postprocessor/: CMakeLists.txt  custom_postprocessor.cpp
examples/freecad_integration/: CMakeLists.txt
examples/python_scripting/: CMakeLists.txt
examples/simulation_demo/: CMakeLists.txt  simulation_demo.cpp
freecad/: CMakeLists.txt
gui/: CMakeLists.txt
gui/include/: IntuiCAMViewerWidget.h  MainWIndow.h  Viewer3D.h  aisprofiledisplay.h  aistoolpathdisplay.h  chuckmanager.h  cylinderselectiondialog.h  isteploader.h  mainwindow.h  materialadditiondialog.h  materialmanager.h  materialspecificcuttingdatawidget.h  opengl3dwidget.h  operationparameterdialog.h  operationtilewidget.h  partloadingpanel.h  rawmaterialmanager.h  setupconfigurationpanel.h  steploader.h  toolmanagementdialog.h  toolmanagementtab.h  toolmanager.h  toolpathgenerationcontroller.h  toolpathlegendwidget.h  toolpathmanager.h  toolpathtimelineframe.h  toolpathtimelinewidget.h  workpiecemanager.h  workspacecontroller.h
gui/resources/: mainwindow.ui  resources.qrc
gui/src/: IntuiCAMViewerWidget.cpp  MainWIndow.cpp  Viewer3D.cpp  aisprofiledisplay.cpp  aistoolpathdisplay.cpp  chuckmanager.cpp  cylinderselectiondialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  materialadditiondialog.cpp  materialmanager.cpp  materialspecificcuttingdatawidget.cpp  opengl3dwidget.cpp  operationparameterdialog.cpp  operationtilewidget.cpp  partloadingpanel.cpp  rawmaterialmanager.cpp  setupconfigurationpanel.cpp  steploader.cpp  toolmanagementdialog.cpp  toolmanagementtab.cpp  toolmanager.cpp  toolpathgenerationcontroller.cpp  toolpathlegendwidget.cpp  toolpathmanager.cpp  toolpathtimelineframe.cpp  toolpathtimelinewidget.cpp  workpiecemanager.cpp  workspacecontroller.cpp
gui/tests/: CMakeLists.txt  test_plusbuttonworkflow.cpp  test_toolpath_addition.cpp  test_toolpath_display_workflow.cpp  test_toolpathgenerationcontroller.cpp  test_toolpathmanager.cpp  test_toolpathtimelinewidget.cpp
plugins/: CMakeLists.txt
plugins/include/IntuiCAM/Plugin/: Interface.h
plugins/operations/: CMakeLists.txt
plugins/operations/drilling/: CMakeLists.txt  drilling_operation.cpp
plugins/operations/milling/: CMakeLists.txt  milling_operation.cpp
plugins/operations/threading/: CMakeLists.txt  threading_operation.cpp
plugins/operations/turning/: CMakeLists.txt  turning_operation.cpp
plugins/postprocessors/: CMakeLists.txt
plugins/postprocessors/lathe/: CMakeLists.txt  lathe_postprocessor.cpp
plugins/postprocessors/mill/: CMakeLists.txt  mill_postprocessor.cpp
plugins/postprocessors/swiss/: CMakeLists.txt  swiss_postprocessor.cpp
python/: CMakeLists.txt
tests/: CMakeLists.txt  test_core.cpp
tests/unit/: test_geometry.cpp
